# gatee

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
bot/: callback_query_handler.py  punishment_determiner.py  punishment_executor.py  regex.py  violation_detector.py
bot/captcha/: __init__.py  base.py  emoji_captcha.py  factory.py  recaptcha.py  simple_captcha.py
bot/database/: db.py
bot/database/models/: __init__.py  captcha_challenge.py  chat.py  misc.py
bot/enums/: __init__.py  captchas.py  punishments.py  vialotion_type.py
bot/filters/: __init__.py  added_to_group.py  admin.py
bot/handlers/: added_to_group.py  captcha.py  new_chat_members.py  start.py
bot/handlers/settings/: callbacks.py  settings.py
bot/middlewares/: __init__.py  admin.py
bot/utils/: display.py  emoji.py  keyboard.py  misc.py  telegram.py
bot/web/: main.py  models.py
bot/web/routers/: index.py  recaptcha.py  submit_recaptcha.py
bot/web/templates/: recaptcha.html
migrations/: 20201001111916_intellivoid.py
