[tool.poetry]
name = "gatee"
version = "0.1.0"
description = "Advanced protection for your Telegram chat"
authors = ["crinny"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
typing_extensions = "^3.7.4"
python-dotenv = "^0.14.0"
aiohttp = {extras = ["speedups"], version = "^3.6.2"}
pydantic = "^1.6.1"
numpy = "^1.19.2"
aiocache = "^0.11.1"
umongo = "^2.3.0"
motor = "^2.3.0"
ujson = "^3.2.0"
pillow = "^7.2.0"
emoji = "^0.6.0"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
jinja2 = "^2.11.2"
pymongo-migrate = "^0.10.0"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/dev-3.x.zip"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
